# 5-feb-ARENA-workshop

./: 1.1_Transformer_from_Scratch_exercises.ipynb  1.1_Transformer_from_Scratch_solutions.ipynb  1.2_Intro_to_Mech_Interp_exercises.ipynb  1.2_Intro_to_Mech_Interp_solutions.ipynb  README.md  exercises_copy.ipynb  gpu_optimizations.py  pyproject.toml  solns_copy.ipynb  solns_copy.py
