# NOTE: Dependencies sourced from ARENA_3.0 submodule (requirements.txt & pyproject.toml)
# If the submodule is updated, sync dependencies by checking:
#   - ARENA_3.0/requirements.txt
#   - ARENA_3.0/pyproject.toml
# Then run: uv pip install -e .

[project]
name = "arena-messin"
version = "0.1.0"
description = "ARENA 3.0 experiments and explorations"
requires-python = ">=3.11,<3.12"
dependencies = [
    # PyTorch
    "torch",
    "torchvision",
    "torchaudio",
    # ML & DL
    "huggingface_hub",
    "torchtext",
    "torchinfo",
    "diffusers",
    "wandb",
    "accelerate",
    "ftfy",
    "safetensors",
    "openai>=1.56.2",
    "sentence-transformers",
    # Data manipulation and analysis
    "einops",
    "eindex-callum",
    "pandas",
    "numpy-stl",
    "scikit-learn",
    "hdbscan",
    "umap-learn",
    # Utilities
    "requests",
    "pytest",
    "tqdm",
    "ipykernel",
    "notebook",
    "ipywidgets==7.7.1",
    "jupyterlab-widgets==1.1.1",
    "jupyter",
    "pre-commit",
    "gdown",
    "portalocker>=2.0.0",
    "typeguard",
    "jaxtyping",
    "tiktoken",
    "frozendict",
    "tabulate",
    "opencv-python",
    "nbformat",
    "docformatter",
    # Visualization
    "matplotlib",
    "plotly",
    "streamlit",
    "streamlit-antd-components==0.2.5",
    "streamlit-image-select",
    "streamlit-on-Hover-tabs",
    "nnsight>=0.3.5",
    "imageio-ffmpeg",
    "mediapy",
    # Chapter 1 (interp)
    "transformer_lens",
    "sae-lens>=4.0.0,<5.0.0",
    "sae-vis>=0.3.1",
    "circuitsvis @ git+https://github.com/callummcdougall/CircuitsVis.git#subdirectory=python",
    "neel-plotly @ git+https://github.com/neelnanda-io/neel-plotly",
    # Chapter 2 (RL)
    "pygame",
    "gymnasium[atari,accept-rom-license,other]==0.29.0",
    "mujoco",
    # Chapter 3 (evals)
    "inspect_ai",
    "wikipedia",
    "python-dotenv",
    "anthropic>=0.42.0",
    "instructor",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E722", "E731", "F722", "E402", "E741"]
extend-select = ["I"]
