# NOTE: Dependencies sourced from ARENA_3.0 submodule (requirements.txt & pyproject.toml)
# If the submodule is updated, sync dependencies by checking:
#   - ARENA_3.0/requirements.txt
#   - ARENA_3.0/pyproject.toml
# Then run: uv pip install -e .

[project]
name = "arena-messin"
version = "0.1.0"
description = "ARENA 3.0 experiments and explorations"
requires-python = ">=3.11"
dependencies = [
    # PyTorch
    "torch",
    # ML & DL
    "huggingface_hub",
    "transformers>=4.30.0,<4.40.0",
    "datasets",
    "wandb",
    # Data manipulation and analysis
    "einops",
    "eindex-callum",
    "numpy>=1.26.0,<2.0.0",
    # Utilities
    "pytest",
    "tqdm",
    "ipykernel",
    "notebook",
    "ipywidgets==7.7.1",
    "jupyterlab-widgets==1.1.1",
    "jupyter",
    "jaxtyping",
    "nbformat",
    # Visualization
    "matplotlib",
    "plotly",
    "rich",
    # Chapter 1 (interp)
    "transformer_lens",
    "circuitsvis @ git+https://github.com/callummcdougall/CircuitsVis.git#subdirectory=python",
    "neel-plotly @ git+https://github.com/neelnanda-io/neel-plotly",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E722", "E731", "F722", "E402", "E741"]
extend-select = ["I"]
